Changes from jTDS 0.9
=========================

11/18/2004 - Alin Sinpalean
 o Tweaked initial StringBuffer sizes to prevent reallocation as much as
   possible.
 o Corrected a bug that was causing Date values to be inserted just like
   Timestamps (i.e. including the time component).

11/17/2004 - Alin Sinpalean
 o Tiny performance tweaks.
 o Added jta.jar to lib folder to ensure compilation works under Java 1.3.
 o Corrected a problem in ReaderOutputStream that was causing read(byte[]) to
   always return the size of the byte array even if less data was read.
 o Fixed a problem with absolute(-1) (the row position was incorrectly
   updated).
 o Improved performance of MSCursorResultSet, by replacing sp_cursor FETCH_INFO
   calls with simple operations mimicking the behavior of SQL Server
   (incrementing the row count on INSERT and UPDATE).
 o Implemented support for ResultSet.insertRow() when no column is updated
   (i.e. inserting default values) in MSCursorResultSet.
 o Added charsets GB2312 and GBK as aliases for MS936.
 o Corrected bug [1067224] getPrimaryKeys does not return PK_NAME column.

11/15/2004 - Mike Hutchinson
 o Refactored XA support so that the driver will run under JRE 1.3 without
   requiring jta.jar to be available.
 o Revised JTdsXA.DLL to make it more compatible with older versions of MSDTC.
 o Changed XA support so that exception is thrown if not used with SQL 2000.
 o Use of XA connection forces prepareSQL=2 to prevent problems with temporary
   stored procedures.
 o Fixed 'bug' 1062671 SQL Parser unable to parse {ts ?}.
 o Fixed bug 1047330 prep statement with > 2100 params fails!
 o Modified callable statement parameters so that IN and OUT values are separated
   which makes jTDS more compatible with other drivers.
 o Added additional constructors for ParamInfo to streamline use of parameters in
   the driver.
 o Replaced the DummyResultSet class with CachedResultSet.